docs/gitlab-full/gitlab-minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitlab-minio-https
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "traefik-master-lb"
    traefik.ingress.kubernetes.io/router.entrypoints: "traefik-websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-master-lb
  tls:
    - hosts:
        - gitlab-minio.my-domain.com
        - gitlab-minio-api.my-domain.com
      secretName: cert-gitlab-minio
  rules:
    - host: gitlab-minio.my-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-gitlab-minio
                port:
                  number: 9001
    - host: gitlab-minio-api.my-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-gitlab-minio
                port:
                  number: 9000
